[gd_scene load_steps=6 format=3 uid="uid://dssasdju3qnqc"]

[ext_resource type="Theme" uid="uid://bmbd2indv7vih" path="res://gui/menu.tres" id="1_njcsx"]
[ext_resource type="Script" path="res://gui/pause_menu.gd" id="2_x4igw"]
[ext_resource type="AudioStream" uid="uid://xst1ekamh3cv" path="res://music/main_menu_theme.mp3" id="2_xd5ik"]
[ext_resource type="Texture2D" uid="uid://lwfjxln88rc7" path="res://gui/volume_mute.png" id="3_trcf7"]
[ext_resource type="Texture2D" uid="uid://c23u7darl2va3" path="res://gui/volume_slider.png" id="4_qlsq1"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_njcsx")
script = ExtResource("2_x4igw")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xd5ik")
volume_db = 10.0
autoplay = true

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.0
offset_top = 20.0
offset_right = 340.0
offset_bottom = 73.0
grow_horizontal = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = "A Living Place in Limited Space"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MenuVBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 7.01
alignment = 1

[node name="ContinueButton" type="Button" parent="CenterContainer/MarginContainer/MenuVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="QuitButton" type="Button" parent="CenterContainer/MarginContainer/MenuVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="Spacer" type="Control" parent="CenterContainer/MarginContainer/MenuVBoxContainer"]
layout_mode = 2

[node name="SoundHBoxContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/MenuVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SoundImage" type="TextureRect" parent="CenterContainer/MarginContainer/MenuVBoxContainer/SoundHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_trcf7")
expand_mode = 3

[node name="SoundSlider" type="HSlider" parent="CenterContainer/MarginContainer/MenuVBoxContainer/SoundHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/center_grabber = -1
theme_override_icons/grabber = ExtResource("4_qlsq1")
theme_override_icons/grabber_highlight = ExtResource("4_qlsq1")
theme_override_icons/grabber_disabled = ExtResource("4_qlsq1")
theme_override_icons/tick = ExtResource("4_qlsq1")
scrollable = false
tick_count = 1

[node name="SoundPercentLabel" type="Label" parent="CenterContainer/MarginContainer/MenuVBoxContainer/SoundHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100%"
